themes/cybercomic/assets/css/main.tpl.css
/* ... */
h2 {
    font-size: 2.9296875rem;
}

h3 {
    font-size: 2.34375rem;
}

h4 {
    font-size: 1.875rem;
}

h5 {
    font-size: 1.5rem;
}

h6 {
    font-size: 1.25rem;
}

ul {
    margin-top: 0;
    margin-bottom: 1rem;
    padding-left: 2.5rem;
}

sup {
    font-size: 0.8rem;
}

sup::before {
    content: "[";
}

sup::after {
    content: "]";
}

blockquote {
  font-size: 1.5rem;
  width: 95%;
  margin: 50px auto;
  color: var(--summary);
  padding: 1.2em 30px 1.2em 40px;
  border-left-width: 8px;
  border-left-style: solid;
  border-left-color: var(--logo-low);
  box-shadow: var(--shadow-pop);
  border-top-width: 8px;
  border-top-style: solid;
  border-top-color: var(--logo-high);
  line-height: 1.6;
  position: relative;
  background: var(--box-background);
}

article blockquote p {
    font-family: var(--typeface-two);
}

blockquote::before {
  content: "\201C";
  font-size: 4em;
  position: absolute;
  left: 10px;
  top: -10px;
  color: var(--logo-high);
}

blockquote::after {
  content: ""; /*"\201D";
  font-size: 4em;
  position: absolute;
  right: 10px;
  bottom: -40px;
  color: var(--logo-high);*/
}

blockquote span {
  display: block;
  color: var(--h1);
  font-style: normal;
  font-weight: bold;
  margin-top: 1em;
}

.hidden {
    display: none;
}

.lowercase {
    text-transform: lowercase;
}

pre code { white-space: pre-wrap; }

.inputbar {
    font-size: 1rem;
    font-family: inherit;
    color: var(--input-text);
    padding: 0.25em 0.5em;
    background-color: var(--input-background);
    border: 0.125rem solid var(--input-border);
    border-radius: 0.25rem;
    box-shadow: var(--shadow-pop);
    outline: 0.1875rem solid transparent;
    margin-right: 0.5em;
}

.inputbar:not(textarea) {
    line-height: 1;
    height: 2.25rem;
    outline: 0.1875rem solid transparent;
}

.inputbar {
    transition: 0.2s;
}

.inputbar:focus {
    border-color: var(--input-focus);
    box-shadow: var(--shadow-pop-lg);
    outline: 0.1875rem solid transparent;
}

.inputbar::placeholder {
    opacity: 0.95;
    font-style: italic;
}

.inputbutton {
    font-size: 1rem;
    font-family: inherit;
    line-height: normal;
    color: var(--body-text);
    padding: 0.25em 0.5em;
    margin-right: 2em;
    background-color: var(--site-background);
    border: 0.125rem solid var(--logo-low);
    border-radius: 0.25rem;
    box-shadow: var(--shadow-pop);
    outline: 0.1875rem solid transparent;
    transition: background 0 ease-in-out, transform 0.2s ease, box-shadow 0.2s ease-in-out;
}

.inputbutton:hover {
    border: 0.125rem solid var(--logo-high);
    box-shadow: var(--shadow-pop-lg);
    outline: 0.1875rem solid transparent;
}

.inputbutton:active {
    box-shadow: var(--shadow-pop);
    outline: 0.1875rem solid transparent;
    transform: scale(0.975);
}

h2 a {
    padding-right: 1rem;
}

table {
  width: 100%;
  margin: 10px auto;
  border-collapse: collapse;
  border-top: 3px solid var(--color-ink);
  border-bottom: 3px solid var(--color-ink);
}

th,
td {
  padding: 0.2em 0.6em 0.2em 0.6em;
}

thead {
  border-bottom: 3px solid var(--color-ink);
  border-right: 1px solid var(--color-ink);
  border-left: 1px solid var(--color-ink);
}

tr {    
  border-bottom: 1px solid #999999;
}

tr:nth-child(1) {
  width: fit-content;
}

th,
td {
  border-right: 1px solid #999999;
  border-left: 1px solid #999999;
}

:root tbody tr:nth-child(odd) {
  background-image: url('data:image/svg+xml;utf8,<svg width="100" height="100" transform="rotate(25)" opacity="0.4" version="1.1" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><g  fill="%23{{- substr $logoHigh 1 -}}"><circle cx="25" cy="25" r="12.5"/><circle cx="75" cy="75" r="12.5"/><circle cx="75" cy="25" r="12.5"/><circle cx="25" cy="75" r="12.5"/></g></svg>');
  background-color: var(--box-background);
  background-size: 8px, 100%;
}

:root.dark-mode tbody tr:nth-child(odd) {
  background-image: url('data:image/svg+xml;utf8,<svg width="100" height="100" transform="rotate(25)" opacity="0.4" version="1.1" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><g  fill="%23{{- substr $logoHighDark 1 -}}"><circle cx="25" cy="25" r="12.5"/><circle cx="75" cy="75" r="12.5"/><circle cx="75" cy="25" r="12.5"/><circle cx="25" cy="75" r="12.5"/></g></svg>');
  background-color: var(--box-background);
  background-size: 8px, 100%;
}

@media (prefers-color-scheme: dark) {
  :root tbody tr:nth-child(odd) {
    background-image: url('data:image/svg+xml;utf8,<svg width="100" height="100" transform="rotate(25)" opacity="0.4" version="1.1" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><g  fill="%23{{- substr $logoHighDark 1 -}}"><circle cx="25" cy="25" r="12.5"/><circle cx="75" cy="75" r="12.5"/><circle cx="75" cy="25" r="12.5"/><circle cx="25" cy="75" r="12.5"/></g></svg>');
  }
  :root.light-mode tbody tr:nth-child(odd) {
    background-image: url('data:image/svg+xml;utf8,<svg width="100" height="100" transform="rotate(25)" opacity="0.3" version="1.1" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><g  fill="%23{{- substr $logoHigh 1 -}}"><circle cx="25" cy="25" r="12.5"/><circle cx="75" cy="75" r="12.5"/><circle cx="75" cy="25" r="12.5"/><circle cx="25" cy="75" r="12.5"/></g></svg>');
  }
}

:root tbody tr:nth-child(even) {
  background-image: url('data:image/svg+xml;utf8,<svg width="100" height="100" transform="rotate(25)" opacity="0.4" version="1.1" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><g  fill="%23{{- substr $logoLow 1 -}}"><circle cx="25" cy="25" r="12.5"/><circle cx="75" cy="75" r="12.5"/><circle cx="75" cy="25" r="12.5"/><circle cx="25" cy="75" r="12.5"/></g></svg>');
  background-color: var(--box-background);
  background-size: 8px, 100%;
}
/* ... */

